Fix line spacing for help box.

--- a/common/css-src/admin/standard/05-help.inc.css
+++ b/common/css-src/admin/standard/05-help.inc.css
@@ -63,3 +63,7 @@
 	font-size:12px;
 	text-decoration:none;
 }
+
+.w2 {
+	line-height: 1em;
+}
